Fix horizontal overflow and update footer

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
       transparent 140px
     ),
     var(--bg);
+  overflow-x: hidden;
 }
 
 .container {
@@ -46,7 +47,7 @@
   padding: 22px 0;
   background: linear-gradient(180deg, rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0));
       backdrop-filter: blur(20px);
-    background-color: rgba(255, 0, 0, 0.04);
+    background-color: rgb(114 64 219 / 25%);
     width: 100%;
     opacity: 1;
     position: fixed;
@@ -1713,13 +1714,14 @@
 }
 
 .pricingName--vip {
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     90deg,
     rgb(255, 162, 1) 0%,
     rgb(255, 199, 102) 25%,
     rgb(255, 162, 1) 75%,
     rgb(255, 199, 102) 100%
-  );
+  ); */
+  color: #fff;
 }
 
 .pricingMeta {
